# xframes-python

./: .gitignore  CMakeLists.txt  README.md  basecomponent.py  basic-fabric.py  index.py  logger.py  pyproject.toml  renderable.py  sampleapp.py  services.py  test.py  theme.py  treetraversal.py  vcpkg.json  widgetnode.py  widgettypes.py
docker/x64-linux/: Dockerfile  runner.sh
src/: xframes.cpp
