[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "xframes"
version = "0.0.1"

[tool.scikit-build]
build.verbose = true
#cmake.source-dir = "./src"
logging.level = "DEBUG"

[tool.scikit-build.cmake.define]
CMAKE_TOOLCHAIN_FILE = "vcpkg/scripts/buildsystems/vcpkg.cmake"